give auto rest html form

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="typing-score mx-5 mt-5">
     <div class="row">
         <div class="contact-form padd-15">
-          <form class="form" method="POST" name="google-sheet">
+          <form class="form" id = "myform" method="POST" name="google-sheet">
           <div class="row">
             <div class="contact-item col-lg-12 col-md-12 col-sm-12  " >
               <div class="form-group  mb-3 d-flex">
@@ -160,6 +160,8 @@
     
 
 </script>
-
+<script>
+    document.getElementById('myform').reset();
+</script>
 </body>
 </html>
